--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<b>Andrew!</b> Not bold.
+<b>Andrew!</b> Not bold.<hr>
 
 <canvas id="gameCanvas" width=800 height=600></canvas>
 
@@ -11,18 +11,24 @@ var ballX = 50
 window.onload = function() {
    canvas = document.getElementById("gameCanvas")
    canvasContext = canvas.getContext("2d")
-   setInterval(drawEverything,50) // ms
+   var framesPerSecond = 30
+   setInterval(function () {
+      drawEverything()
+      moveEverything()
+   },1000/framesPerSecond) // ms
+}
+
+function moveEverything() {
+   ballX = ballX + 5
 }
 
 function drawEverything() {
-   ballX = ballX + 5
    canvasContext.fillStyle = 'black'
    canvasContext.fillRect(0,0,canvas.width,canvas.height)
    canvasContext.fillStyle = 'white'
-   canvasContext.fillRect(225,210,200,200)
+   canvasContext.fillRect(0,210,10,100) // x,y,w,h
    canvasContext.fillStyle = 'red'
    canvasContext.fillRect(ballX,100,10,10)
-   console.log(ballX)
 }
 </script>
 </html>
