--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
-<b>Andrew!</b> Not bold.<hr>
-
+Andrew
+<br>
 <canvas id="gameCanvas" width=800 height=600></canvas>
 
 <script>
 var canvas
 var canvasContext
 var ballX = 50
+var ballSpeedX = 5
 
 window.onload = function() {
    canvas = document.getElementById("gameCanvas")
@@ -19,16 +20,28 @@ window.onload = function() {
 }
 
 function moveEverything() {
-   ballX = ballX + 5
+   ballX += ballSpeedX
+   // If ball goes outside of canvas, reverse direction
+   if (ballX > canvas.width || ballX < 0) {
+      ballSpeedX = -ballSpeedX // reverse direction
+   }
 }
 
 function drawEverything() {
-   canvasContext.fillStyle = 'black'
-   canvasContext.fillRect(0,0,canvas.width,canvas.height)
-   canvasContext.fillStyle = 'white'
-   canvasContext.fillRect(0,210,10,100) // x,y,w,h
-   canvasContext.fillStyle = 'red'
-   canvasContext.fillRect(ballX,100,10,10)
+   //  Next line blacks out screen with black
+   colorRect(0,0,canvas.width,canvas.height,'black') // x,y,w,h,color
+
+   // Left player paddle
+   colorRect(0,210,10,100,'white')
+
+   // Draw ball
+   colorRect(ballX,100,10,10,'red')
 }
+
+function colorRect(leftX,topY,width,height,drawColor) {
+   canvasContext.fillStyle = drawColor
+   canvasContext.fillRect(leftX,topY,width,height)
+}
+
 </script>
 </html>
