--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ const PADDLE_THICKNESS = 10
 
 var player1Score = 0
 var player2Score = 0
+const WINNING_SCORE = 3
+
+var showingWinScreen = false
 
 function calculateMousePosition(evt) {
    var rect = canvas.getBoundingClientRect() // black rectangle area
@@ -49,6 +52,11 @@ window.onload = function() {
 }
 
 function ballReset() {
+   if (player1Score >= WINNING_SCORE || player2Score >= WINNING_SCORE) {
+      player1Score = 0
+      player2Score = 0
+      showingWinScreen = true
+   }
    ballSpeedX = -ballSpeedX // reverse direction
    ballX = canvas.width/2
    ballY = canvas.height/2
@@ -64,6 +72,7 @@ function computerMovement() {
 }
 
 function moveEverything() {
+   if (showingWinScreen) return
 
    computerMovement()
 
@@ -74,17 +83,21 @@ function moveEverything() {
    if (ballX < 0) {
       if ((ballY > paddle1Y) && (ballY < paddle1Y + PADDLE_HEIGHT)) {
          ballSpeedX = -ballSpeedX
+         var deltaY = ballY - (paddle1Y + PADDLE_HEIGHT/2)
+         ballSpeedY = deltaY * 0.35
       } else {
+         player2Score++ // must be before ballReset()
          ballReset()
-         player2Score++
       }
    }
    if (ballX > canvas.width) {
       if ((ballY > paddle2Y) && (ballY < paddle2Y + PADDLE_HEIGHT)) {
          ballSpeedX = -ballSpeedX
+         var deltaY = ballY - (paddle2Y + PADDLE_HEIGHT/2)
+         ballSpeedY = deltaY * 0.35
       } else {
+         player1Score++ // must be before ballReset()
          ballReset()
-         player1Score++
       }
    }
    if (ballY > canvas.height || ballY < 0) {
@@ -93,8 +106,16 @@ function moveEverything() {
 }
 
 function drawEverything() {
-   //  Next line blacks out screen with black
+   // Next line blacks out screen with black
+   // Without it, there would be a trace of everythings' last position still
+   // shown on the screen
    colorRect(0,0,canvas.width,canvas.height,'black') // x,y,w,h,color
+
+   if (showingWinScreen) {
+      canvasContext.fillStyle = 'white'
+      canvasContext.fillText("Click to continue.",100,100)
+      return
+   }
 
    // Left player paddle
    colorRect(0,paddle1Y,PADDLE_THICKNESS,100,'white')
