--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@ function calculateMousePosition(evt) {
    }
 }
 
+function handleMouseClick(evt) {
+   if (showingWinScreen) {
+      player1Score = 0
+      player2Score = 0
+      showingWinScreen = false
+   }
+}
+
 window.onload = function() {
    canvas = document.getElementById("gameCanvas")
    canvasContext = canvas.getContext("2d")
@@ -43,6 +51,8 @@ window.onload = function() {
       drawEverything()
       moveEverything()
    },1000/framesPerSecond) // ms
+
+   canvas.addEventListener('mousedown',handleMouseClick)
 
    canvas.addEventListener('mousemove',
             function(evt) {
@@ -53,8 +63,6 @@ window.onload = function() {
 
 function ballReset() {
    if (player1Score >= WINNING_SCORE || player2Score >= WINNING_SCORE) {
-      player1Score = 0
-      player2Score = 0
       showingWinScreen = true
    }
    ballSpeedX = -ballSpeedX // reverse direction
@@ -105,6 +113,12 @@ function moveEverything() {
    }
 }
 
+function drawNet() {
+   for (var i=0; i < canvas.height; i+=40) {
+      colorRect(canvas.width/2 - 1, i, 2, 20,'white')
+   }
+}
+
 function drawEverything() {
    // Next line blacks out screen with black
    // Without it, there would be a trace of everythings' last position still
@@ -113,9 +127,18 @@ function drawEverything() {
 
    if (showingWinScreen) {
       canvasContext.fillStyle = 'white'
-      canvasContext.fillText("Click to continue.",100,100)
+
+      if (player1Score >= WINNING_SCORE) {
+         canvasContext.fillText("Left Player Won!",350,200)
+      } else { //player2Score >= WINNING_SCORE)
+         canvasContext.fillText("Right Player Won!",350,200)
+      }
+
+      canvasContext.fillText("Click to continue.",350,500)
       return
    }
+
+   drawNet()
 
    // Left player paddle
    colorRect(0,paddle1Y,PADDLE_THICKNESS,100,'white')
